@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19970916
+MANIFEST for ded, version t19980202
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
