@@ -1,3 +1,7 @@
+1998-02-02  Thomas E. Dickey  <dickey@clark.net>
+
+	* mkdirs.sh: current autoconf
+
 1997-09-16  Thomas E. Dickey  <dickey@clark.net>
 
 	* makefile.in: dummy sources-rule for stupid 'make' programs.
